# SealGuard

./: .env.example  .gitignore  README.md
sealguard-admin/: .dockerignore  Dockerfile  README.md  dev.md  docker-compose.yaml  next.config.ts  package-lock.json  package.json
sealguard-admin/app/: globals.css  layout.tsx  page.tsx
sealguard-ai/: README.md
sealguard-api/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
sealguard-api/app/: main.py
sealguard-api/app/api/: routes.py
sealguard-api/app/application/detection/: use_cases.py
sealguard-api/app/bootstrap/: backfill_template_embeddings.py  config.py  dependencies.py  seed_demo_data.py
sealguard-api/app/domain/detection/: ports.py
sealguard-api/app/infrastructure/ai/: sealvision_engine.py  siamese_vector_matcher.py
sealguard-api/app/infrastructure/db/: session.py
sealguard-api/app/interfaces/api/: routes.py
sealguard-api/app/interfaces/api/dto/: business.py  detect.py
sealguard-api/app/schemas/: detect.py
sealguard-api/app/services/: sealvision_service.py
sealguard-api/application/detection/: use_cases.py
sealguard-api/bootstrap/: backfill_template_embeddings.py  config.py  dependencies.py  seed_demo_data.py
sealguard-api/domain/detection/: entities.py  ports.py
sealguard-api/infrastructure/ai/: sealvision_engine.py
sealguard-api/infrastructure/db/: models.py  session.py
sealguard-api/interfaces/api/: routes.py
sealguard-api/interfaces/api/dto/: business.py  detect.py
sealguard-infra/: README.md  docker-compose.yml
(+19 files in other folders)
